fix: implement byte-level BOM detection to support UTF-16 LE and UTF-8 encodings in pingHeartbeat